--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "3.4.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +42,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "main": "index.js",
+  "author": "Petyo Petkov <Pspetkov13@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@eslint/js": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "eslint": "9.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.1",
+    "globals": "15.0.0",
+    "prettier": "3.2.5",
+    "typescript-eslint": "7.6.0"
   }
 }
