--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "7.34.1",
     "globals": "15.0.0",
     "prettier": "3.2.5",
+    "react-router-dom": "6.22.3",
     "typescript-eslint": "7.6.0"
   }
 }
