--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@eslint/js": "9.0.0",
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
+    "antd": "5.16.1",
     "eslint": "9.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
