--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,6 @@
 {
-  "semi": false,
+  "printWidth": 100,
   "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "printWidth": 80
+  "trailingComma": "es5",
+  "endOfLine": "auto"
 }
