--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "10.4.19",
     "firebase": "^10.11.1",
+    "i18next": "^23.11.5",
     "postcss": "8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "3.4.3",
     "typescript": "^4.9.5",
