--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "10.4.19",
+    "clsx": "^2.1.1",
     "firebase": "^10.11.1",
     "i18next": "^23.11.5",
     "postcss": "8.4.38",
