--- a/package.json
+++ b/package.json
@@ -7,19 +7,26 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.6.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.78",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "10.4.19",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
     "i18next": "^23.11.5",
+    "lodash": "^4.17.21",
     "postcss": "8.4.38",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-scripts": "5.0.1",
