--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/fslightbox-react": "^1.7.7",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.4",
     "@types/node": "^16.18.96",
@@ -22,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
+    "fslightbox-react": "^1.7.6",
     "i18next": "^23.11.5",
     "lodash": "^4.17.21",
     "postcss": "8.4.38",
