--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "firebase": "^10.11.1",
     "fslightbox-react": "^1.7.6",
     "i18next": "^23.11.5",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "postcss": "8.4.38",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "3.4.3",
     "typescript": "^4.9.5",
