--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next": "^23.11.5",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "8.4.38",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
