--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hello-pangea/dnd": "^16.6.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.6.1",
@@ -16,7 +17,6 @@
     "@types/lodash": "^4.17.4",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.78",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "10.4.19",
     "axios": "^1.7.2",
@@ -30,7 +30,6 @@
     "moment": "^2.30.1",
     "postcss": "8.4.38",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-leaflet": "^4.2.1",
