--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^14.1.2",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "3.4.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
